# power-monitor-c

./: LICENSE  armhf-cross.txt  client.c  consts.h  main.c  meson.build  multicast_server.c  multicast_server.h
